@@ -1,3 +1,8 @@
+2012-09-19 Wed  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/lib/cygbuild.pl: (Help::Preparation commands::files):
+	Update .tmp to .ex suffix.
+
 2012-02-18 Sat  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh (CygbuildCmdInstallMain): Fix call to
